@@ -1,3 +1,8 @@
+Sun Aug 03 22:49:40 PDT 2003  Christian Hammond <chipx86@gnupdate.org>
+
+	* src/QGaimBListWindow.cpp:
+	  - The toolbar icons on the buddy list window display again.
+
 Sun Aug 03 22:43:13 PDT 2003  Christian Hammond <chipx86@gnupdate.org>
 
 	* src/QGaimAccountsWindow.cpp:
